fixed hex grid no overflow of creature issue

--- a/src/containers/Battlefield/Battlefield.module.css
+++ b/src/containers/Battlefield/Battlefield.module.css
@@ -4,7 +4,6 @@
     background-image: url(../../public/assets/textures/snow005.png);
     background-size: 200px;
     background-repeat: repeat;
-    /* background-size: cover; */
     background-blend-mode: darken;
     background-color: rgb(255, 250, 250, 0.5);
     border: 3px solid gold;
@@ -18,7 +17,6 @@
     left: 1px;
     right: 1px;
     bottom: 1px;
-    /* border: 3px solid rgba(78, 78, 78, 0.3); */
     border-left: 2px solid rgba(44, 42, 30, 0.5);
     border-top: 2px solid rgba(44, 42, 30, 0.5);
 }
@@ -41,26 +39,14 @@ li {
     position: relative;
     float: left;
     width: 6.65%;
-    /* width: 27.85714285714286%; */
     padding: 0 0 7.67% 0;
-    background-image: url(../../public/assets/textures/hiclipart.com.png);
+    background-image: url(../../public/assets/textures/hex-grid.png);
     background-size: cover;
-    /* background-color: rgba(255, 0, 0, 0.2); */
-    /* padding: 0 0 32.16760145166612% 0; */
-    /* -o-transform: rotate(-60deg) skewY(30deg);
-    -moz-transform: rotate(-60deg) skewY(30deg);
-    -webkit-transform: rotate(-60deg) skewY(30deg);
-    -ms-transform: rotate(-60deg) skewY(30deg);
-    transform: rotate(-60deg) skewY(30deg);
-    background: #fd005f;
-    overflow: hidden;
-    visibility: hidden; */
 }
 
-/* li * {
-    outline: black solid 1px;
+li * {
     visibility: visible;
-} */
+}
 
 li:nth-child(30n+16),
 li:nth-child(30n+17),
@@ -80,11 +66,6 @@ li:nth-child(30n+30)
 {
     margin-top: -2%;
     margin-bottom: -2%;
-    /* -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    transform: translateX(50%) rotate(-60deg) skewY(30deg); */
     -o-transform: translateX(50%);
     -moz-transform: translateX(50%);
     -webkit-transform: translateX(50%);
@@ -98,71 +79,18 @@ li:nth-child(30n+30)
     left: 0;
     width: 100%;
     height: 100%;
-    /* border-left: solid 2px #333333;
-    border-right: solid 2px #333333;
-    -o-transform: skewY(-30deg) rotate(60deg);
-    -moz-transform: skewY(-30deg) rotate(60deg);
-    -webkit-transform: skewY(-30deg) rotate(60deg);
-    -ms-transform: skewY(-30deg) rotate(60deg);
-    transform: skewY(-30deg) rotate(60deg);
-    overflow: hidden; */
 }
-
-/* .hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-} */
-
-/* .hexagon:before {
-    left: 9%;
-    top: -13%;
-    border-top: solid 2px #333333;
-    border-right: solid 2px #333333;
-  } */
-  
-/* .hexagon:after {
-  bottom: -13%;
-  left: -8.4%;
-  border-bottom: solid 2px #333333;
-  border-left: solid 2px #333333;
-} */
 
 .hexagon:hover {
     cursor: pointer;
-    background-color: rgba(51, 51, 51, 0.5);
+    /* background-color: rgba(51, 51, 51, 0.5); */
+    background-image: url(../../public/assets/textures/hex-hover.png);
+    background-size: cover;
 }
 
 .hexagon * {
     pointer-events: none;
-    /* transform: translate(-50%,-50%); */
-    /* position: relative; */
-    /* left: -10%;
-    top: -10%; */
 }
-
-/* .onHexagon {
-    z-index: 999;
-    position: relative;
-    overflow: visible;
-} */
-
-/* .onHexagon:before {
-    content: " ";
-    position: absolute;
-    z-index: 1;
-    /* left: 10px;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-    background-color: inherit;
-} */
 
 .footer {
     position: fixed;
@@ -221,8 +149,6 @@ button {
     background-blend-mode: overlay;
     background-repeat: repeat-x;
     background-size: 60px;
-    /* box-shadow: 20px 20px rgba(255, 250, 250, 0.5); */
-    /* outline: rgba(255, 250, 250, 0.5) solid 20px; */
 }
 
 .distance:before {
